--- a/Todey/Views/Base.lproj/Main.storyboard
+++ b/Todey/Views/Base.lproj/Main.storyboard
@@ -10,6 +10,45 @@
     </dependencies>
     <scenes>
         <!--Todey-->
+        <scene sceneID="fT5-ya-Ozf">
+            <objects>
+                <tableViewController id="yS2-mb-1Nd" customClass="CategoryViewController" customModule="Todey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="WzO-ur-wJr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="fTd-Sa-dtF" userLabel="Category Cell">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fTd-Sa-dtF" id="khG-Mj-eQR">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yS2-mb-1Nd" id="vU2-0C-yMB"/>
+                            <outlet property="delegate" destination="yS2-mb-1Nd" id="kXo-Lg-UeN"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todey" id="8GT-iB-Kv1">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="WZ5-G5-BEr">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="yS2-mb-1Nd" id="WpL-PS-McH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="np1-fa-BKj" kind="show" identifier="goToItems" id="6AE-S7-uVd"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q2D-na-h5m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="966" y="139"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="ltd-8j-h9d">
             <objects>
                 <tableViewController id="np1-fa-BKj" customClass="ToDoListViewController" customModule="Todey" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,9 +56,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="502-ta-uG8">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="np1-fa-BKj" id="t7b-fS-6Ct"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell" id="1FG-cQ-vDh">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1FG-cQ-vDh" id="fUT-n4-tdz">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -32,7 +79,7 @@
                             <outlet property="delegate" destination="np1-fa-BKj" id="yob-N1-NyU"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todey" id="2Bp-IP-eRG">
+                    <navigationItem key="navigationItem" title="Items" id="2Bp-IP-eRG">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="m4Q-yF-kLu">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -43,12 +90,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DvU-Zx-HM3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="832.79999999999995" y="144.3778110944528"/>
+            <point key="canvasLocation" x="1703" y="139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xDM-Jh-Qb7">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hUW-Bq-4yC" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="hUW-Bq-4yC" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Tr-YL-t5V">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -60,7 +107,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="np1-fa-BKj" kind="relationship" relationship="rootViewController" id="ojR-IL-ukG"/>
+                        <segue destination="yS2-mb-1Nd" kind="relationship" relationship="rootViewController" id="Deo-Ua-0oR"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Iit-gt-LyI" userLabel="First Responder" sceneMemberID="firstResponder"/>
